--- a/tic.html
+++ b/tic.html
@@ -30,7 +30,8 @@
             insult
             <input class="p2label" type="text" maxlength="15" placeholder="mauviette">
             </div>
-            <div>IA? <input type="checkbox" id="isIA" value="yes"></div>
+            <div>IA? <input type="checkbox" id="isIA" value="yes"><br>
+            unbeatable <input type="checkbox" id="unbeatable" value="yes"></div>
 
             
             
