--- a/tic.html
+++ b/tic.html
@@ -35,7 +35,7 @@
             </form>
             <form class="secondform" style = "display:none">
                 <div class="insult title">
-                now, carefully chose your insults.</div>
+                now, carefully choose your insults.</div>
             <div class="form2p1">
 
                 <div id="showp1name"></div>
